# wavelets_smart

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Wavelets_smart.sln  appveyor.yml  makefile
Wavelets_smart/: MS_serial.txt  Wavelet_main.cpp  Wavelets_smart.vcxproj  Wavelets_smart.vcxproj.filters  serial.txt  wavelet_metas_coeff.txt  wavelet_random_coeff.txt
src/: wavelets_smart.cpp
